Multiple changes.  Created two column six box section.  Aligned image with top heading section.  Fixed alignment with Nav section.  Added footer but is not centered

--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -186,3 +186,94 @@ footer {
 	padding-bottom: 50px;
 	margin-bottom: 50px;
 }
+
+
+
+
+
+
+/* SERVICES PAGE */
+
+.servicesNavClass {
+display: flex;
+justify-content: space-between;
+padding: 3%;
+/* border: 4px solid red; */
+}
+
+.servicesNavLinksClass {
+	display: flex;
+	justify-content: space-between;
+	/* border: 4px solid red; */
+	width: 60%;
+	padding: 1%;
+	align-content: center;
+	
+}
+
+.servicesNavLinksClass a {
+	
+	align-content: center;
+	color: dimgray;
+}
+
+.services-header-img {
+	margin: 3%;
+}
+
+.servicesHeaderClass {
+	display: flex;
+	margin: 4%;
+	border-bottom: 2px solid black;
+	padding-bottom: 8%;
+	font-size: 18px;
+}
+
+.servicesHeaderDivClass {
+	display: flex:
+}
+
+.navAndHeaderClass {
+	/* border: 4px solid red; */
+	display: flex;
+	flex-direction: column;
+	/* align-content: flex-start; */
+}
+
+
+.twoColumn6BoxSectionClass {
+display: flex;
+/* border: 3px solid black; */
+height: 95%;
+flex-wrap: wrap;
+justify-content: center;
+justify-content: space-evenly;
+align-content: space-between;
+margin: 1%;
+margin-bottom: 7%;
+
+
+
+}
+
+.twoColumn6BoxSectionClass div {
+	display: flex;
+	flex-direction: column;
+	border: 1px solid black;
+	width: 46%;
+	box-sizing: border-box;
+	align-items: flex-start;
+	padding: 2%;
+	background-color:rgb(235, 235, 235);
+	
+	
+
+}
+
+.twoColumn6BoxSectionClass button {
+	margin-top: 6%;
+}
+
+.bullet {
+	list-style-type: square;
+}
